--- a/codetaton.html
+++ b/codetaton.html
@@ -18,7 +18,7 @@
     <header>
         <h1>No Hunger No Waste</h1>
         <div class="top-right">
-            <span id="points">💖 100</span>
+            <span id="points">100</span>
         </div>
         <div class="top-left">
             <a href="#" id="home-icon">&#x1F3E0;
